Fixed footer overlapping

--- a/assets/scss/welcome-page.scss
+++ b/assets/scss/welcome-page.scss
@@ -1,3 +1,7 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
 body {
     font-size: 16px;
     line-height: 32px;
